--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -4,12 +4,15 @@
 <h4> 더 좋은 구조와 설계, 어제보다 오늘 더 나은 코드 </h4>
 <h5> (클린코드, 리팩토링, 이펙티브 자바 등..)</h5>
 <br>
+<h5> 화면은 의미 없고, 앞으로 더 좋은 설계와 구조, 코드로 개선하고 싶은 모듈을 테스트로 연습삼아 개발하는 환경입니다.</h5>
+<h5> 개발 소스(java) / 테스트 소스(junit5)</h5>
+
+<br>
 <div class="col-md-12">
     <div class="row">
         <div class="col-md-6">
             {{#emp}}
                 <a href="/" class="btn btn-info active" role="button">Logout</a>
-                <a href="/overtime/save" role="button" class="btn btn-primary">연장근로 등록</a>
             {{/emp}}
         </div>
     </div>
